2013-09-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Add support for reverse_lookup_unify scanner preference.

	* src/attack.c (attack_network): Check for reverse_lookup_unify. Update
	other preferences logging style and comments.

2013-09-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c: (attack_start): Remove again the sending
	of FINISHED. It confuses the clients, they don't need this
	extra message.

	* src/ntp_11.c (ntp_11_parse_input): Don't send FINISHED upon
	STOP_ATTACK, HOST_INTERRUPTED is sufficient for the time being.
	(ntp_11_show_end): Removed.

	* src/ntp_11.h: Removed proto accordingly.

2013-09-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Add support for reverse_lookup_only scanner preference.

	* src/attack.c (attack_network): Check for reverse_lookup_only
	preference adequately. Fix log message style.

2013-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/preferences.c: Removed all now-unneeded includes.
	(preferences_get_checks_read_timeout): Removed.  It is an unused
	function.
	(preferences_reset_cache): Don't call removed function anymore.
	(inited): Removed unused macro.

	* src/preferences.h: Removed proto accordingly.

2013-09-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Add support for exclude_hosts scanner preference.

	* src/attack.c (attack_network): Call openvas_hosts_exclude when
	exclude_hosts value is provided.

2013-09-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/preferences.c (preferences_autoload_dependencies): Removed.
	(preferences_reset_cache): Don't reset "autoload_dependencies" anymore.
	Caching is not relevant for this preference anyway, it is called once per attack.

	* src/preferences.h: Remove proto accordingly.

	* src/attack.c (attack_network): Replace the explicit call for
	autoload_dependencies preference by generic bool check. In case of an error,
	apply a default that is sensible in this context.
